fix: make poi recall category and distance aware
